--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <a href="https://www.instagram.com/lesoisoexotik_2911" target="_blank">Instagram</a>
   </p>
 
-</body>,<img src="logo.png"
+</body><img src="logo.png"
      alt="Les Oiseaux Exotik"
      style="max-width:220px; border-radius:20px; margin-bottom:20px;">
+
 
 </html>
