--- a/index.html
+++ b/index.html
@@ -27,6 +27,34 @@
     <a href="https://www.tiktok.com/@les0iseauxexotik" target="_blank">TikTok</a> |
     <a href="https://www.instagram.com/lesoisoexotik_2911" target="_blank">Instagram</a>
   </p>
+<hr style="margin:40px 0">
+
+<h2>🎥 Nos vidéos populaires</h2>
+
+<div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px">
+
+  <iframe width="300" height="170"
+    src="https://www.youtube.com/embed/WcnB9WGdrog"
+    title="Les Oiseaux Exotik"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+
+  <iframe width="300" height="170"
+    src="https://www.youtube.com/embed/Pww33i95PJ0"
+    title="Les Oiseaux Exotik"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+
+  <iframe width="300" height="170"
+    src="https://www.youtube.com/embed/6AENOPBBybc"
+    title="Les Oiseaux Exotik"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+
+</div>
 
 </body><img src="logo.png"
      alt="Les Oiseaux Exotik"
