--- a/index.html
+++ b/index.html
@@ -62,3 +62,45 @@
 
 
 </html>
+<hr style="margin:40px 0">
+
+<h2>🛒 Oiseaux disponibles</h2>
+
+<div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px">
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <img src="perruches-ondulees.jpg" style="width:100%; border-radius:10px">
+    <h3>Couple de perruches ondulées</h3>
+    <p><strong>Prix : 15 000 FCFA</strong></p>
+    <a href="https://wa.me/221779148221">Commander via WhatsApp</a>
+  </div>
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <img src="inseparables.jpg" style="width:100%; border-radius:10px">
+    <h3>Couple d’inséparables</h3>
+    <p><strong>Prix : 50 000 FCFA</strong></p>
+    <a href="https://wa.me/221779148221">Commander via WhatsApp</a>
+  </div>
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <img src="perruche-collier.jpg" style="width:100%; border-radius:10px">
+    <h3>Perruche à collier</h3>
+    <p><strong>Prix : 30 000 FCFA</strong></p>
+    <a href="https://wa.me/221779148221">Commander via WhatsApp</a>
+  </div>
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <img src="callopsite-albino.jpg" style="width:100%; border-radius:10px">
+    <h3>Couple de callopsittes albinos</h3>
+    <p><strong>Prix : 100 000 FCFA</strong></p>
+    <a href="https://wa.me/221779148221">Commander via WhatsApp</a>
+  </div>
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <img src="callopsite-lutino.jpg" style="width:100%; border-radius:10px">
+    <h3>Couple de callopsittes lutino</h3>
+    <p><strong>Prix : 80 000 FCFA</strong></p>
+    <a href="https://wa.me/221779148221">Commander via WhatsApp</a>
+  </div>
+
+</div>
