--- a/index.html
+++ b/index.html
@@ -104,3 +104,28 @@
   </div>
 
 </div>
+<hr style="margin:40px 0">
+
+<h2>💳 Moyens de paiement</h2>
+
+<p>Paiement simple et sécurisé via :</p>
+
+<div style="display:flex; justify-content:center; gap:20px; flex-wrap:wrap">
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <h3>🌊 Wave</h3>
+    <p>Numéro : <strong>+221 77 914 82 21</strong></p>
+    <a href="https://wa.me/221779148221">
+      Confirmer paiement Wave
+    </a>
+  </div>
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <h3>📱 Orange Money</h3>
+    <p>Numéro : <strong>+221 77 914 82 21</strong></p>
+    <a href="https://wa.me/221779148221">
+      Confirmer paiement Orange Money
+    </a>
+  </div>
+
+</div>
