--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <p>
     <a href="https://youtube.com/@lesoiseauxexotiques221" target="_blank">YouTube</a> |
     <a href="https://www.tiktok.com/@les0iseauxexotik" target="_blank">TikTok</a> |
-    <a href="https://www.instagram.com/lesoisoexotik_2911" target="_blank">Instagram</a>
+    <a href="https://www.instagram.com/lesoisoexotik_2911" target="_blank">Instagram</a> |
+    <a href="https://web.facebook.com/lesoisoexotik2911" target="_blank">Facebook</a> 
   </p>
 <hr style="margin:40px 0">
 
