--- a/watch.html
+++ b/watch.html
@@ -28,7 +28,7 @@
       <div class="aspect-video w-full">
         <iframe
           class="w-full h-full rounded-xl"
-          src="https://www.youtube.com/embed?listType=user_uploads&list=lesoiseauxexotiques221"
+          src="https://www.youtube.com/embed/C7F9p1jdaRc?si=zhpJileh4LvD2QvA"
           title="Les Oiseaux Exotik"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
