--- a/index.html
+++ b/index.html
@@ -57,11 +57,24 @@
 
 </div>
 
-</body><img src="logo.png"
+</body>
+<img src="logo.png"
      alt="Les Oiseaux Exotik"
      style="max-width:220px; border-radius:20px; margin-bottom:20px;">
-
-
+</body>
+<a href="watch.html" style="
+  display:inline-block;
+  margin:15px;
+  padding:12px 18px;
+  background:#15803d;
+  color:white;
+  border-radius:10px;
+  text-decoration:none;
+  font-weight:bold;
+">
+  🎬 WatchApp
+</a>
+  
 </html>
 <hr style="margin:40px 0">
 
