--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
 ">
   🎬 WatchApp
 </a>
+<p style="margin:20px">
+  <a href="watch.html"
+     style="display:inline-block;
+            padding:12px 18px;
+            background:#15803d;
+            color:white;
+            border-radius:10px;
+            text-decoration:none;
+            font-weight:bold;
+            font-size:20px;">
+    🎬 WatchApp
+  </a>
+</p>
   
 </html>
 <hr style="margin:40px 0">
