--- a/index.html
+++ b/index.html
@@ -7,34 +7,153 @@
 </head>
 <body style="font-family:Arial; background:#0f172a; color:white; text-align:center; padding:30px">
 
-  <h1 style="font-size:36px; margin-bottom:10px;">Les Oiseaux Exotik</h1>
+  <h1>Les Oiseaux Exotik</h1>
 
-  <p style="font-size:18px; margin-bottom:20px;">
+  <p>
     Oiseaux exotiques de qualité • Commande facile via WhatsApp • Sénégal
   </p>
 
-  <!-- Lien WhatsApp -->
   <p style="margin:20px">
     <a href="https://wa.me/221779148221"
-       style="color:#22c55e; font-size:20px; text-decoration:none; font-weight:bold;">
+       style="color:#22c55e; font-size:20px; text-decoration:none;">
        📞 Commander via WhatsApp
     </a>
   </p>
 
-  <!-- Bouton WatchApp -->
-  <p style="margin:20px">
-    <a href="watch.html"
-       style="display:inline-block;
-              padding:12px 18px;
-              background:#15803d;
-              color:white;
-              border-radius:10px;
-              text-decoration:none;
-              font-weight:bold;
-              font-size:20px;">
-      🎬 WatchApp
-    </a>
+  <h2>Nos réseaux</h2>
+
+  <p>
+    <a href="https://youtube.com/@lesoiseauxexotiques221" target="_blank">YouTube</a> |
+    <a href="https://www.tiktok.com/@les0iseauxexotik" target="_blank">TikTok</a> |
+    <a href="https://www.instagram.com/lesoisoexotik_2911" target="_blank">Instagram</a> |
+    <a href="https://web.facebook.com/lesoisoexotik2911" target="_blank">Facebook</a> 
   </p>
+<hr style="margin:40px 0">
+
+<h2>🎥 Nos vidéos populaires</h2>
+
+<div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px">
+
+  <iframe width="300" height="170"
+    src="https://www.youtube.com/embed/WcnB9WGdrog"
+    title="Les Oiseaux Exotik"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+
+  <iframe width="300" height="170"
+    src="https://www.youtube.com/embed/Pww33i95PJ0"
+    title="Les Oiseaux Exotik"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+
+  <iframe width="300" height="170"
+    src="https://www.youtube.com/embed/6AENOPBBybc"
+    title="Les Oiseaux Exotik"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+
+</div>
 
 </body>
+<img src="logo.png"
+     alt="Les Oiseaux Exotik"
+     style="max-width:220px; border-radius:20px; margin-bottom:20px;">
+</body>
+<a href="watch.html" style="
+  display:inline-block;
+  margin:15px;
+  padding:12px 18px;
+  background:#15803d;
+  color:white;
+  border-radius:10px;
+  text-decoration:none;
+  font-weight:bold;
+">
+  🎬 WatchApp
+</a>
+<p style="margin:20px">
+  <a href="watch.html"
+     style="display:inline-block;
+            padding:12px 18px;
+            background:#15803d;
+            color:white;
+            border-radius:10px;
+            text-decoration:none;
+            font-weight:bold;
+            font-size:20px;">
+    🎬 WatchApp
+  </a>
+</p>
+
+</p>
+
 </html>
+<hr style="margin:40px 0">
+
+<h2>🛒 Oiseaux disponibles</h2>
+
+<div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px">
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <img src="perruches-ondulees.jpg" style="width:100%; border-radius:10px">
+    <h3>Couple de perruches ondulées</h3>
+    <p><strong>Prix : 15 000 FCFA</strong></p>
+    <a href="https://wa.me/221779148221">Commander via WhatsApp</a>
+  </div>
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <img src="inseparables.jpg" style="width:100%; border-radius:10px">
+    <h3>Couple d’inséparables</h3>
+    <p><strong>Prix : 50 000 FCFA</strong></p>
+    <a href="https://wa.me/221779148221">Commander via WhatsApp</a>
+  </div>
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <img src="perruche-collier.jpg" style="width:100%; border-radius:10px">
+    <h3>Perruche à collier</h3>
+    <p><strong>Prix : 30 000 FCFA</strong></p>
+    <a href="https://wa.me/221779148221">Commander via WhatsApp</a>
+  </div>
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <img src="callopsite-albino.jpg" style="width:100%; border-radius:10px">
+    <h3>Couple de callopsittes albinos</h3>
+    <p><strong>Prix : 100 000 FCFA</strong></p>
+    <a href="https://wa.me/221779148221">Commander via WhatsApp</a>
+  </div>
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <img src="callopsite-lutino.jpg" style="width:100%; border-radius:10px">
+    <h3>Couple de callopsittes lutino</h3>
+    <p><strong>Prix : 80 000 FCFA</strong></p>
+    <a href="https://wa.me/221779148221">Commander via WhatsApp</a>
+  </div>
+
+</div>
+<hr style="margin:40px 0">
+
+<h2>💳 Moyens de paiement</h2>
+
+<p>Paiement simple et sécurisé via :</p>
+
+<div style="display:flex; justify-content:center; gap:20px; flex-wrap:wrap">
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <h3>🌊 Wave</h3>
+    <p>Numéro : <strong>+221 77 914 82 21</strong></p>
+    <a href="https://wa.me/221779148221">
+      Confirmer paiement Wave
+    </a>
+  </div>
+
+  <div style="border:1px solid #444; padding:15px; width:260px">
+    <h3>📱 Orange Money</h3>
+    <p>Numéro : <strong>+221 77 914 82 21</strong></p>
+    <a href="https://wa.me/221779148221">
+      Confirmer paiement Orange Money
+    </a>
+  </div>
+
