--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <a href="https://youtube.com/@lesoiseauxexotiques221" target="_blank">YouTube</a> |
     <a href="https://www.tiktok.com/@les0iseauxexotik" target="_blank">TikTok</a> |
     <a href="https://www.instagram.com/lesoisoexotik_2911" target="_blank">Instagram</a> |
-    <a href="https://web.facebook.com/lesoisoexotik2911" target="_blank">Facebook</a> 
+    <a href="https://web.facebook.com/lesoisoexotik2911" target="_blank">Facebook</a> | 
+     <a href="https://whatsapp.com/channel/0029Vb6oi0A42DcjjM2oLK2r" target="_blank"
+     style="color:#22c55e; font-weight:bold;">
+     Chaîne WhatsApp
   </p>
 <hr style="margin:40px 0">
 
