--- a/index.html
+++ b/index.html
@@ -65,6 +65,25 @@
      alt="Les Oiseaux Exotik"
      style="max-width:220px; border-radius:20px; margin-bottom:20px;">
 </body>
+<!-- Facebook SDK -->
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous"
+  src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v18.0">
+</script>
+<hr style="margin:40px 0">
+
+<h2>📘 Nos publications Facebook</h2>
+
+<div class="fb-page"
+  data-href="https://web.facebook.com/lesoisoexotik2911"
+  data-tabs="timeline"
+  data-width="340"
+  data-height="500"
+  data-small-header="false"
+  data-adapt-container-width="true"
+  data-hide-cover="false"
+  data-show-facepile="true">
+</div>
 
 </a>
 <p style="margin:20px">
